Fix z-index of mobile menu and manifesto

--- a/src/assets/scss/components/_fullscreen.scss
+++ b/src/assets/scss/components/_fullscreen.scss
@@ -7,7 +7,7 @@
   left: 0;
   overflow: hidden;
   background-color: rgba($color: $beige, $alpha: 0.95);
-  z-index: 0;
+  z-index: -1;
   opacity: 0;
   transition: opacity 0.5s ease;
   padding: 2rem 0.625rem;
