--- a/src/assets/scss/components/_manifesto.scss
+++ b/src/assets/scss/components/_manifesto.scss
@@ -5,7 +5,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   opacity: 0;
   color: $white;
   overflow-x: hidden;
